--- a/src/app/styles/TaskList.css
+++ b/src/app/styles/TaskList.css
@@ -55,5 +55,24 @@
   }
   
   .task-list-container h2:hover {
-    transform: scale(1.05); /* Pequeño efecto de aumento al pasar el cursor */
+    transform: scale(1.05);
+  }
+
+  .skeleton-task {
+    width: 90%;
+    height: 80px;
+    background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+    background-size: 200% 100%;
+    animation: shimmer 1.5s infinite;
+    border-radius: 8px;
+    margin: 10px auto;
+  }
+  
+  @keyframes shimmer {
+    0% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: -200% 0;
+    }
   }
